Fixed image overlapping text issue

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,9 @@ footer {
     position: fixed;
     bottom: 0;
 }
+img {
+    max-width: 100%;
+}
 .copyright-text h2{
     padding-top:5px;
     padding-bottom: 5px;
